Fixed add url page CSS on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,4 @@
-html {
-	height: 100%;
-}
-
-body {
+html, body {
 	height: 100%;
 }
 
